force-app/main/default/objects/Alumni_Payments__c/Alumni_Payments__c.object-meta.xml
<CustomObject>
    <label>Alumni Payment</label>
    <nameField>
        <displayFormat>FUND-{0000}</displayFormat>
        <label>Alumni Payments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alumni Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>