force-app/main/default/objects/Alumni_Payments__c/fields/Alumni_Activities_Fund_Raising_Request__c.field-meta.xml
<CustomField>
    <fullName>Alumni_Activities_Fund_Raising_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alumni Activities - Fund Raising Request</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Alumni_Activities__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Fund Raising Request</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Alumni_Activities__c</referenceTo>
    <relationshipLabel>Alumni Payments</relationshipLabel>
    <relationshipName>Alumni_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>