force-app/main/default/objects/Alumni_Payments__c/fields/Mode_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Payment__c</fullName>
    <label>Mode of Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Razorpay</fullName>
            </value>
            <value>
                <fullName>Billdesk</fullName>
            </value>
            <value>
                <fullName>PayTM</fullName>
            </value>
            <value>
                <fullName>EasyPay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>