force-app/main/default/objects/Alumni_Payments__c/fields/Payment_Url__c.field-meta.xml
<CustomField>
    <fullName>Payment_Url__c</fullName>
    <label>Payment Url</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>