force-app/main/default/objects/Alumni_Payments__c/fields/Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Reference_Id__c</fullName>
    <label>Reference Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>