force-app/main/default/objects/Alumni_Payments__c/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <label>Transaction Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>