force-app/main/default/objects/Alumni_Payments__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Payment_Date__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Payment_Date_Time__c</columns>
    <columns>Transaction_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>